--- a/.env.development
+++ b/.env.development
@@ -2,4 +2,4 @@ DB_PASSWORD=root
 DB_USERNAME=root
 NODE_ENV=development
 TOOLS_COMMON_PG_PORT=54320
-TOOLS_COMMON_PG_WRITE_HOST=localhost
+TOOLS_COMMON_PG_WRITE_HOST=0.0.0.0
