chore: Remove ms_ prefix
At ManoMano, we call homer a microservice, but some other companies
might call it a tool or whatever.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,5 @@ services:
     environment:
       - POSTGRES_PASSWORD=root
       - POSTGRES_USER=root
-      - POSTGRES_DB=ms_homer
+      - POSTGRES_DB=homer
     restart: unless-stopped
