--- a/.env.test
+++ b/.env.test
@@ -1,9 +1,9 @@
-GITLAB_TOKEN=GITLAB_TOKEN
-DB_PASSWORD=root
-DB_USERNAME=root
-TOOLS_COMMON_PG_PORT=54320
-TOOLS_COMMON_PG_WRITE_HOST=localhost
 GITLAB_SECRET=GITLAB_SECRET
+GITLAB_TOKEN=GITLAB_TOKEN
 NODE_ENV=test
+POSTGRES_HOST=localhost
+POSTGRES_PASSWORD=root
+POSTGRES_PORT=54320
+POSTGRES_USER=root
 SLACK_BOT_USER_O_AUTH_ACCESS_TOKEN=SLACK_BOT_USER_O_AUTH_ACCESS_TOKEN
 SLACK_SIGNING_SECRET=SLACK_SIGNING_SECRET
