fix: make emails configurable

--- a/.env.test
+++ b/.env.test
@@ -7,3 +7,4 @@ POSTGRES_PORT=54320
 POSTGRES_USER=root
 SLACK_BOT_USER_O_AUTH_ACCESS_TOKEN=SLACK_BOT_USER_O_AUTH_ACCESS_TOKEN
 SLACK_SIGNING_SECRET=SLACK_SIGNING_SECRET
+EMAIL_PATTERNS=@manomano.com,@prt.manomano.com
