fixup! fix: make emails configurable

--- a/.env.test
+++ b/.env.test
@@ -7,4 +7,4 @@ POSTGRES_PORT=54320
 POSTGRES_USER=root
 SLACK_BOT_USER_O_AUTH_ACCESS_TOKEN=SLACK_BOT_USER_O_AUTH_ACCESS_TOKEN
 SLACK_SIGNING_SECRET=SLACK_SIGNING_SECRET
-EMAIL_PATTERNS=@manomano.com,@prt.manomano.com
+EMAIL_DOMAINS=my-domain.com,ext.my-domain.com
