feat: make support channel configurable

--- a/.env.test
+++ b/.env.test
@@ -12,4 +12,6 @@ POSTGRES_PORT=54320
 POSTGRES_USER=root
 SLACK_BOT_USER_O_AUTH_ACCESS_TOKEN=SLACK_BOT_USER_O_AUTH_ACCESS_TOKEN
 SLACK_SIGNING_SECRET=SLACK_SIGNING_SECRET
+SLACK_SUPPORT_CHANNEL_ID=C0XXXXXXXXX
+SLACK_SUPPORT_CHANNEL_NAME=support-homer
 TICKET_MANAGEMENT_URL_PATTERN=https://my-ticket-management.com/view/{ticketId}
