--- a/.env.test
+++ b/.env.test
@@ -9,3 +9,4 @@ SLACK_BOT_USER_O_AUTH_ACCESS_TOKEN=SLACK_BOT_USER_O_AUTH_ACCESS_TOKEN
 SLACK_SIGNING_SECRET=SLACK_SIGNING_SECRET
 EMAIL_DOMAINS=my-domain.com,ext.my-domain.com
 GITLAB_URL=https://my-git.domain.com
+TICKET_MANAGEMENT_URL_PATTERN=https://my-ticket-management.com/view/{ticketId}
