--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -29,6 +29,12 @@ jobs:
           name: dist
           path: dist
 
+      - name: Upload node_modules
+        uses: actions/upload-artifact@v4
+        with:
+          name: node_modules
+          path: node_modules
+
   docker:
     name: Build Docker Image and publish to Github Artifact Registry
     needs: build
@@ -42,11 +48,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: ↙️ Download build artifact
+      - name: ↙️ Download dist
         uses: actions/download-artifact@v4
         with:
           name: dist
           path: dist
+
+      - name: ↙️ Download node_modules
+        uses: actions/download-artifact@v4
+        with:
+          name: node_modules
+          path: node_modules
 
       - uses: docker/setup-buildx-action@v3
 
@@ -62,11 +74,6 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-
-      - name: Unconfigure npm proxy
-        run: |
-          npm config rm proxy
-          npm config rm https-proxy
 
       - name: Build and push Docker image
         id: build-and-push
