fix(environment): Create POSTGRES_DATABASE_NAME env variable
Fix #29

--- a/.env.test
+++ b/.env.test
@@ -1,12 +1,13 @@
+EMAIL_DOMAINS=my-domain.com,ext.my-domain.com
 GITLAB_SECRET=GITLAB_SECRET
 GITLAB_TOKEN=GITLAB_TOKEN
+GITLAB_URL=https://my-git.domain.com
 NODE_ENV=test
+POSTGRES_DATABASE_NAME=homer
 POSTGRES_HOST=localhost
 POSTGRES_PASSWORD=root
 POSTGRES_PORT=54320
 POSTGRES_USER=root
 SLACK_BOT_USER_O_AUTH_ACCESS_TOKEN=SLACK_BOT_USER_O_AUTH_ACCESS_TOKEN
 SLACK_SIGNING_SECRET=SLACK_SIGNING_SECRET
-EMAIL_DOMAINS=my-domain.com,ext.my-domain.com
-GITLAB_URL=https://my-git.domain.com
 TICKET_MANAGEMENT_URL_PATTERN=https://my-ticket-management.com/view/{ticketId}
