--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,13 @@
+EMAIL_DOMAINS=my-domain.com,ext.my-domain.com
+GITLAB_SECRET=GITLAB_SECRET
+GITLAB_TOKEN=GITLAB_TOKEN
+GITLAB_URL=https://my-git.domain.com
 NODE_ENV=development
-POSTGRES_HOST=0.0.0.0
+POSTGRES_DATABASE_NAME=homer
+POSTGRES_HOST=localhost
 POSTGRES_PASSWORD=root
 POSTGRES_PORT=54320
 POSTGRES_USER=root
+SLACK_BOT_USER_O_AUTH_ACCESS_TOKEN=SLACK_BOT_USER_O_AUTH_ACCESS_TOKEN
+SLACK_SIGNING_SECRET=SLACK_SIGNING_SECRET
+TICKET_MANAGEMENT_URL_PATTERN=https://my-ticket-management.com/view/{ticketId}
