--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,15 +11,15 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 20
       - run: yarn install --frozen-lockfile
       - run: yarn build
       - run: yarn lint
       - run: yarn test --coverage
 
-      - name: "Upload to Codecov"
-        uses: "codecov/codecov-action@v4"
+      - name: 'Upload to Codecov'
+        uses: 'codecov/codecov-action@v4'
         with:
           directory: coverage
         env:
-          CODECOV_TOKEN: "${{ secrets.CODECOV_TOKEN }}"
+          CODECOV_TOKEN: '${{ secrets.CODECOV_TOKEN }}'
