chore(monitoring): Disable by default with opt-in
Fixes #89

--- a/.env.test
+++ b/.env.test
@@ -4,6 +4,7 @@ EMAIL_DOMAINS=my-domain.com,ext.my-domain.com
 GITLAB_SECRET=GITLAB_SECRET
 GITLAB_TOKEN=GITLAB_TOKEN
 GITLAB_URL=https://my-git.domain.com
+MONITORING_ENABLED=true
 NODE_ENV=test
 POSTGRES_DATABASE_NAME=homer
 POSTGRES_HOST=localhost
