--- a/.env.development
+++ b/.env.development
@@ -3,6 +3,7 @@ EMAIL_DOMAINS=my-domain.com,ext.my-domain.com
 GITLAB_SECRET=GITLAB_SECRET
 GITLAB_TOKEN=GITLAB_TOKEN
 GITLAB_URL=https://my-git.domain.com
+MONITORING_ENABLED=true
 NODE_ENV=development
 POSTGRES_DATABASE_NAME=homer
 POSTGRES_HOST=localhost
