chore(libs): remove node-fetch, add supertest to avoid connection reset during test

--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "dotenv": "17.2.3",
     "express": "5.1.0",
     "helmet": "8.1.0",
-    "node-fetch": "2.6.9",
     "pg": "8.16.3",
     "pg-hstore": "2.3.4",
     "pino": "9.13.0",
@@ -42,8 +41,8 @@
     "@types/express": "5.0.3",
     "@types/jest": "30.0.0",
     "@types/node": "24.6.2",
-    "@types/node-fetch": "2.6.2",
     "@types/pg": "8.15.5",
+    "@types/supertest": "^6.0.3",
     "concurrently": "9.2.1",
     "eslint": "9.36.0",
     "eslint-config-prettier": "10.1.8",
@@ -55,6 +54,7 @@
     "pino-pretty": "13.1.1",
     "prettier": "3.6.2",
     "rimraf": "6.0.1",
+    "supertest": "^7.1.4",
     "ts-jest": "29.4.4",
     "typescript": "5.9.3",
     "typescript-eslint": "^8.45.0",
