--- a/package.json
+++ b/package.json
@@ -12,56 +12,52 @@
     "dev": "concurrently --kill-others 'yarn build -w' 'wait-on dist/src/index.js && nodemon --watch dist dist/src/index.js'",
     "lint": "eslint .",
     "pre-commit": "exec-staged",
-    "prepare": "husky install",
+    "prepare": "husky",
     "start": "node dist/src/index.js",
     "start-env": "node --env-file=.env dist/src/index.js",
     "test": "jest --runInBand --forceExit"
   },
   "engines": {
-    "node": ">=20"
+    "node": ">=24"
   },
   "dependencies": {
-    "@slack/web-api": "6.8.1",
+    "@slack/web-api": "7.10.0",
     "ajv": "^8.17.1",
-    "dayjs": "1.11.13",
-    "dd-trace": "3.13.2",
-    "dotenv": "16.0.3",
-    "express": "4.21.1",
-    "helmet": "6.0.1",
-    "node-fetch": "2.6.9",
-    "pg": "8.9.0",
+    "dayjs": "1.11.18",
+    "dd-trace": "5.68.0",
+    "dotenv": "17.2.3",
+    "express": "5.1.0",
+    "helmet": "8.1.0",
+    "pg": "8.16.3",
     "pg-hstore": "2.3.4",
-    "pino": "8.10.0",
-    "sequelize": "6.28.0",
-    "slackify-markdown": "4.3.1",
+    "pino": "9.13.0",
+    "sequelize": "6.37.7",
+    "slackify-markdown": "4.5.0",
     "source-map-support": "0.5.21",
-    "tsconfig-paths": "4.1.2"
+    "tsconfig-paths": "4.2.0"
   },
   "devDependencies": {
     "@josselinbuils/exec-staged": "1.0.2",
-    "@types/express": "4.17.17",
-    "@types/jest": "29.5.14",
-    "@types/node": "18.13.0",
-    "@types/node-fetch": "2.6.2",
-    "@types/pg": "8.6.6",
-    "@types/signale": "1.4.4",
-    "@typescript-eslint/eslint-plugin": "5.62.0",
-    "@typescript-eslint/parser": "5.51.0",
-    "concurrently": "7.6.0",
-    "eslint": "8.33.0",
-    "eslint-config-airbnb": "19.0.4",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-import-resolver-typescript": "3.5.3",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-prettier": "4.2.1",
-    "husky": "8.0.3",
-    "jest": "29.7.0",
-    "nodemon": "3.1.7",
-    "pino-pretty": "11.3.0",
-    "prettier": "2.8.4",
+    "@types/express": "5.0.3",
+    "@types/jest": "30.0.0",
+    "@types/node": "24.6.2",
+    "@types/pg": "8.15.5",
+    "@types/supertest": "^6.0.3",
+    "concurrently": "9.2.1",
+    "eslint": "9.36.0",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "2.32.0",
+    "husky": "9.1.7",
+    "jest": "30.2.0",
+    "nodemon": "3.1.10",
+    "pino-pretty": "13.1.1",
+    "prettier": "3.6.2",
     "rimraf": "6.0.1",
-    "ts-jest": "29.2.5",
-    "typescript": "5.6.3",
-    "wait-on": "7.0.1"
+    "supertest": "^7.1.4",
+    "ts-jest": "29.4.4",
+    "typescript": "5.9.3",
+    "typescript-eslint": "^8.45.0",
+    "wait-on": "9.0.1"
   }
 }
