feat: add GitHub support - Introduce unified provider abstraction and models for GitLab/GitHub - Implement GitHub provider (API client + webhooks) and extend GitLab provider - Add approval & pipeline info (fetchApprovalInfo, UnifiedApprovalInfo, PR.pipeline) - Improve review messages with pipeline/mergeable emojis and accurate approval counts - Restore project threshold warnings and add GitHub project channel counting

--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,7 @@
 API_BASE_PATH=/api/v1/homer
 EMAIL_DOMAINS=my-domain.com,ext.my-domain.com
+GITHUB_SECRET=GITHUB_SECRET
+GITHUB_TOKEN=GITHUB_TOKEN
 GITLAB_SECRET=GITLAB_SECRET
 GITLAB_TOKEN=GITLAB_TOKEN
 GITLAB_URL=https://my-git.domain.com
