chore(pnpm): update and remove map files

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,4 +1,7 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["config/homer", "src", "plugins"]
+  "include": ["config/homer", "src", "plugins"],
+  "compilerOptions": {
+    "sourceMap": false
+  }
 }
