--- a/.dockerignore
+++ b/.dockerignore
@@ -6,8 +6,7 @@
 # Node
 node_modules
 npm-debug.log
-yarn-debug.log
-yarn-error.log
+pnpm-debug.log
 
 # Build artifacts
 dist
@@ -38,7 +37,7 @@ jest.config.js
 # Config files
 .prettierrc
 .eslintrc
-eslint.config.js
+eslint.config.mjs
 exec-staged.config.js
 
 # Documentation
