--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
   ],
   "scripts": {
     "build": "rimraf dist && tsc --project tsconfig.build.json",
-    "dev": "concurrently --kill-others 'yarn build -w' 'wait-on dist/src/index.js && nodemon --watch dist dist/src/index.js'",
+    "dev": "concurrently --kill-others 'pnpm build -w' 'wait-on dist/src/index.js && nodemon --watch dist dist/src/index.js'",
     "lint": "eslint .",
     "pre-commit": "exec-staged",
-    "prepare": "husky",
+    "prepare": "node .husky/install.mjs",
     "start": "node dist/src/index.js",
     "start-env": "node --env-file=.env dist/src/index.js",
     "test": "jest --runInBand --forceExit"
   },
+  "packageManager": "pnpm@10.23.0",
   "engines": {
-    "node": ">=24"
+    "node": ">=24",
+    "pnpm": ">=10.23.0"
   },
   "dependencies": {
     "@slack/web-api": "7.12.0",
@@ -38,6 +40,7 @@
   },
   "devDependencies": {
     "@josselinbuils/exec-staged": "1.0.2",
+    "@slack/types": "^2.18.0",
     "@types/express": "5.0.5",
     "@types/jest": "30.0.0",
     "@types/node": "24.10.1",
@@ -48,6 +51,7 @@
     "eslint-config-prettier": "10.1.8",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "2.32.0",
+    "globals": "^16.5.0",
     "husky": "9.1.7",
     "jest": "30.2.0",
     "nodemon": "3.1.10",
